infra/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    app: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: registry.digitalocean.com/smerc-dev/hugo:v0.10
        imagePullPolicy: Always
        ports:
        - containerPort: 1313
