infra/k8s/ghost_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ghost
    spec:
      containers:
        - env:
            - name: url
              value: https://blog.adamhancock.co.uk
            - name: AZURE_STORAGE_CONNECTION_STRING
              valueFrom:
                secretKeyRef:
                  key: AZURE_STORAGE_CONNECTION_STRING
                  name: azure
          image: adamhancock/ghost-azure-storage
          imagePullPolicy: Always
          name: blog
          ports:
            - containerPort: 2368
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - name: config-volume
              mountPath: /var/lib/ghost/config.production.json
              subPath: config.production.json
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: config-volume
          configMap:
            # Provide the name of the ConfigMap containing the files you want
            # to add to the container
            name: ghostconfig
