infra/k8s/ghost_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  ports:
    - name: "2368"
      port: 2368
      protocol: TCP
      targetPort: 2368
  selector:
    app: ghost
  sessionAffinity: None
  type: ClusterIP
