infra/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  type: LoadBalancer
  selector:
    app: blog
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1313
