infra/k8s/ghost_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress-blog
spec:
  rules:
    - host: blog.adamhancock.co.uk
      http:
        paths:
          - backend:
              serviceName: ghost
              servicePort: 2368
            path: /
  tls:
    - hosts:
        - blog.adamhancock.co.uk
      secretName: blog-cert-1
